✨ Add delayed news processor
