# src/app4event/entity.ts
@@ -7,6 +7,7 @@ export type Session = openapi.types.components['schemas']['Session']
 export type CustomField = openapi.types.components['schemas']['CustomField']
 export type Image = openapi.types.components['schemas']['Image']
 export type News = openapi.types.components['schemas']['News']
+export type DelayedNews = openapi.types.components['schemas']['DelayedNews']
 export type Group = openapi.types.components['schemas']['Group']
 export type Venue = openapi.types.components['schemas']['Venue']
 export type Day = openapi.types.components['schemas']['Day']
